<resources>
    <string name="app_name">CrimeLess</string>
    <string name="title_home">Home</string>
    <string name="title_Activity">Activity</string>
    <string name="title_notifications">Profile</string>

    <string name="Information">Information</string>
    <string name="Information_value">Your house is safe and monitored via CCTV - Living Room. Always turn on the notification feature that has been provided to fully support this application.</string>

    <string name="Confirmation">Confirmation</string>
    <string name="Confirmation_value">Apps is successfully connected to the CCTV</string>

    <string name="time_info">21:09 WIB</string>
    <string name="seeMore">See More</string>

    <string name="title_one_history">You can find your</string>
    <string name="title_two_history">History Here!</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here!</string>
    <string name="register_now">Register Now</string>
    <string name="back_to_login">Back to Login</string>
    <string name="use_password">Password length min 6 Char</string>
    <string name="successfully_created">Successfully Created!</string>
    <string name="addressDummy">Tangerang, Indonesia</string>
    <string name="tv_address">Address</string>
    <string name="et_address">Jakarta, Indonesia</string>
    <string name="emailDummy">adminDummy@gmail.com</string>
    <string name="tv_email">Email</string>
    <string name="user_dummy">User Dummy</string>
    <string name="tv_name">Name</string>
    <string name="et_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="et_phone_number">082114888906</string>
    <string name="et_phone_number2">082114555906</string>
    <string name="log_out">Log Out</string>
    <string name="complete_your_data">Private Data</string>
    <string name="cnt">Continue</string>
    <string name="desc_2">Please enter 2 different priority numbers that can be contacted</string>
    <string name="desc_1">Please enter your real data</string>
    <string name="priority_two">Priority Two</string>
    <string name="finish">Finish</string>
    <string name="one_more_things">One More Things!</string>
    <string name="priority_one">Priority One</string>
    <string name="living_room_cctv">Living Room CCTV</string>
    <string name="latest_acitivity">Latest Acitivity</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_one">Phone to Call 1</string>
    <string name="phone_two">Phone to Call 2</string>
</resources>