<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".ui.Register.PrivateDataActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/complete_your_data"
                android:textColor="@color/primaryDarkColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/desc_1"
                android:textAlignment="center"
                android:textColor="@color/black_grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/tv_name"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/et_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/et_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_phone"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/tv_address"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/et_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_address"
                app:layout_constraintTop_toBottomOf="@+id/tv_address" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/primaryDarkColor"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/cnt"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/etAddress"
                app:layout_constraintStart_toStartOf="@+id/etAddress"
                app:layout_constraintTop_toBottomOf="@+id/etAddress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>