<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".ui.Authentication.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register_here"
                android:textColor="@color/primaryDarkColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/etEmailRegister"
                app:layout_constraintStart_toStartOf="@+id/etEmailRegister"
                app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

            <TextView
                android:id="@+id/btnForgotPasswordRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/use_password"
                app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
                app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />

            <Button
                android:id="@+id/btnRegisterNow"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryDarkColor"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/register_now"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
                app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
                app:layout_constraintTop_toBottomOf="@+id/btnForgotPasswordRegister" />

            <Button
                android:id="@+id/btnBacktoLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/back_to_login"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/btnRegisterNow"
                app:layout_constraintStart_toStartOf="@+id/btnRegisterNow"
                app:layout_constraintTop_toBottomOf="@+id/btnRegisterNow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>